--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.121.3",
     "groq>=0.36.0",
+    "pydantic>=2.12.4",
+    "pydantic-settings>=2.11.0",
     "python-dotenv>=1.2.1",
     "uvicorn[standard]>=0.38.0",
 ]
